--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     }
   },
   "scripts": {
-    "test": "TZ=UTC jest",
-    "debug": "TZ=UTC node --inspect-brk node_modules/.bin/jest --runInBand"
+    "test": "TZ=UTC vitest",
+    "debug": "TZ=UTC vitest --inspect-brk --threads=false"
   },
   "devDependencies": {
     "axios": "^1.6.0",
@@ -39,9 +39,10 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.7.0",
+    "msw": "^2.0.3",
     "node-red": "^3.1.0",
     "node-red-node-test-helper": "^0.3.2",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "vitest": "^0.34.6"
   }
 }
